automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ header a {
   padding: 1px;
 }
 
+#press img:hover {
+    border: 5px rgb(111,127,122) solid;
+}
+
 p {
   color: #555;
   font-size: 1em;
